cabal-version:      2.4
name:               aoc
version:            0.1.0.0
license:            MIT
copyright:          2024  Trent Turner
author:             Trent Turner
synopsis:           Advent Of Code 2024

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- extra-source-files:
  -- LICENSE
   README.md

common shared
  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds
    -- -fplugin=Effectful.Plugin
    -funbox-strict-fields
    -- -fspecialise-aggressively -fexpose-all-unfoldings


  mixins:
    --base hiding (Prelude),
    --relude (Relude as Prelude, Relude.Container.One),
    --relude

  default-extensions:
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NoStarIsType
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns
    LinearTypes

    NamedFieldPuns
    RecordWildCards
    OverloadedRecordDot
    DuplicateRecordFields

  build-depends:
    , base          >=4.13.0.0 && <4.21.0.0.0
    , bytestring
    , text
    -- , linear-base
    , random
    , vector
    , array
    , parsec
    , containers
    , unordered-containers
    , hashable
    , algebraic-graphs
    -- , conduit
    , mtl
    , transformers
    , cmdargs
    , memoize
    , psqueues
    , ansi-terminal
    , ansi-terminal-types
    -- , effectful
    -- , effectful-core
    -- , effectful-plugin
    , recursion-schemes
    , free
    -- fun stuff
    -- , selective
    -- , validation-selective
    -- , data-fix

    -- , filepath
    -- , fastsum -- fastsum is marked as broken on nixpkgs :(

    --, happy
    --, happy  >= 1.20.1.1
    --, alex

    --, aeson
    --, async
    --, base          >=4.13.0.0 && <4.18.0.0.0
    --, data-default
    --, directory
    --, filepath
    --, optics-core
    --, profunctors
    --, relude        >=1.0
    --, shower
    --, time
    , with-utf8

  default-language:   Haskell2010


library aoc-lib
  import: shared
  exposed-modules:
    Lib
    Solver
    Days.Day01
    Days.Day02
    Days.Day03
    Days.Day04
    Days.Day05
    Days.Day06
    Days.Day07
    Days.Day08
    Days.Day09
    Days.Day10
    Days.Day11
    Days.Day12
    Days.Day13
    Days.Day14
    Days.Day15
    Days.Day16
    Days.Day17
    Days.Day18
    Days.Day19
    Days.Day20
    Days.Day21
    Days.Day22
    Days.Day23
    Days.Day24
    Days.Day25
    Util.List
    Util.Parsers
    Util.Graph
    Util.Direction
  hs-source-dirs:     src

executable aoc
  import:  shared
  build-depends: aoc-lib
  main-is: Main.hs
  hs-source-dirs: app
  -- exposed-modules:
  -- other-modules:

-- test-suite tests
--   import: shared
--   type: exitcode-stdio-1.0
--   main-is: Test.hs
--   build-depends: HUnit, QuickCheck, aoc-lib
--   hs-source-dirs: tests
